2004-11-19 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/_gptrget.c (_gptrget),
	* device/lib/_gptrgetc.c (_gptrgetc),
	* device/lib/_gptrput.c (_gptrput): _naked allows to use ret
	  instead of sjmp to ret
	* src/mcs51/peeph.def: added peepholes 3.d-g and 177.g,h provided
	  by anonymous in RFE #1067986, thanks

2004-11-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version: bumped version to 2.4.7
	* device/lib/_gptrget.c (_gptrget): is now _naked
	* device/lib/_gptrgetc.c (_gptrgetc): is now _naked
	* device/lib/_gptrput.c (_gptrput): is now _naked
	* src/SDCCast.c (createBlock): removed ridiculous self-assignment,
	  (createFunction): fixed xstack
	* src/SDCCglue.c (emitMaps): set allocation required for bit area
	* src/SDCCicode.c (geniCodeCast): don't change SPEC_OCLS for literal
	  or bit either,
	  (geniCodeCritical): store original interrupt state in an iTemp bit
	  var unless stack-auto
	* src/SDCCicode.h: added CRITICAL and ENDCRITICAL to SKIP_IC2
	* src/SDCCmain.c (setIncludePath): added include/target to search path
	* src/SDCCmem.c (allocParms): store bit vars in bit space, not overlay
	* src/SDCCsymt.c (checkFunction): don't check regbank for isr's against
	  prototype,
	  (processFuncArgs): put bit vars in bit area
	* src/mcs51/gen.c (saveRegisters, unsaveRegisters, genXpush, saveRBank,
	  unsaveRBank): fixed xstack,
	  (genFunction): bugfix: replaced (global!) reentrant with fReentrant,
	  (genFunction, genEndFunction): fixed xstack,
	  (genAssign): optimization don't walk backwards through mem
	* src/mcs51/main.c (_mcs51_regparm): don't pass bit params in registers
	* src/mcs51/ralloc.c (createStackSpil): spill bits to bit area
	* support/regression/Makefile: also make library (for stack-auto) when
	  making "all" and added "test-mcs51-xstack-auto"
	* support/regression/fwk/lib/testfwk.c: added T2_isr prototype for mcs51
	* support/regression/ports/mcs51/T2_isr.c: added this file as a stub